Fixed a layout issue on Chrome mobile

--- a/css/about.css
+++ b/css/about.css
@@ -29,6 +29,7 @@
 
 .social-media-row {
     margin: 0 auto;
+    padding-bottom: 20px;
 }
 
 .facebook {
